--- a/.releaserc.json
+++ b/.releaserc.json
@@ -42,6 +42,13 @@
       "assets": ["CHANGELOG.md"],
       "message": "chore(release): ${nextRelease.version} [skip ci]\n\n${nextRelease.notes}"
     }],
-    "@semantic-release/github"
+    ["@semantic-release/github", {
+      "addReleases": "bottom",
+      "failComment": false,
+      "failTitle": false,
+      "labels": false,
+      "releasedLabels": false,
+      "successComment": false
+    }]
   ]
 }
