--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,8 @@
     "lib": ["es2022", "dom", "dom.iterable"],
     // Type Imports
     "verbatimModuleSyntax": true,
+    // Module resolution for astro-pure compatibility
+    "moduleResolution": "bundler",
     // Others
     "baseUrl": ".",
     "strictNullChecks": true,
